refacto and optimize